# jpeg-compressor

./: Cargo.toml  LICENSE_MIT  README.md  index.html
src/: lib.rs
tests/: web.rs
