[package]
name = "jpeg-compressor"
version = "0.1.0"
authors = ["Jean Zamora <jeancarloscuatro1@gmail.com>"]
description = "Change the quality of a base64 jpeg image easily from javascript."
license = "MIT"
repository = "https://github.com/jeancarlos1111/jpeg-compressor"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
base64 = "0.13"
image = "0.25"
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
